WIP adding the requirements from problems markdown file.

--- a/Project1/BreastCancerWisconsin/10PointDataInspection.ipynb
+++ b/Project1/BreastCancerWisconsin/10PointDataInspection.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "d92b5e7b-3002-4b29-942f-7402118ef1c7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e6f55e86-7271-400d-b10b-29e2d9807b09",
    "metadata": {},
    "outputs": [],
@@ -54,6 +56,17 @@
     "from scipy import stats\n",
     "\n",
     "df = pd.read_csv('Data/data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e6e81bc-6a41-47e5-a717-9a37638851fc",
+   "metadata": {},
+   "source": [
+    "**Understanding import cell**\n",
+    "```\n",
+    "This cell imports all of the modules and provies a path to read the dataset.\n",
+    "```"
    ]
   },
   {
@@ -74,8 +87,16 @@
     }
    ],
    "source": [
-    "print(\"Data Shape:\\nNumber of Rows:                 Number of Features:\\n\")\n",
+    "print(\"Data Shape:\\nNumber of Rows, Number of Features:\\n\")\n",
     "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "474faadd-68df-49d9-9dcd-a6399e9b516b",
+   "metadata": {},
+   "source": [
+    "## This cell prints the shape of the dataset (there are 569 rows or samples and 33 columns or features for each sample)."
    ]
   },
   {
@@ -106,6 +127,64 @@
    "source": [
     "print(\"List of columns:\\n\")\n",
     "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4781a3a8-1b06-4809-8205-47a9e21bf8de",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "**Understanding df.columns**\n",
+    "```\n",
+    "This cell prints a list of the name for each column. This helps us understand what analysis we are able to do with the data // The 'Unnamed: 32' is an artifact from how the file was saved and the data contains an extra column that is blank.\n",
+    "\n",
+    "Each of the features is a variable that we can analyze.\n",
+    "\n",
+    "The columns that end with _mean are showing the average (mean) of the feature value across the sample.\n",
+    "\n",
+    "The columns that end with _se are showing the \"standard error\" of the feature or the variability/spread of that feature's measurements.\n",
+    "\n",
+    "The columns that end with _worst are showing the largest/most severe value of the feature.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "62da4d91-f466-42d8-9457-aea7428b185c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"'id'\", \"'diagnosis'\", \"'radius'\", \"'texture'\", \"'perimeter'\", \"'area'\", \"'smoothness'\", \"'compactness'\", \"'concavity'\", \"'concave points'\", \"'symmetry'\", \"'fractal_dimension'\", \"'radius'\", \"'texture'\", \"'perimeter'\", \"'area'\", \"'smoothness'\", \"'compactness'\", \"'concavity'\", \"'concave points'\", \"'symmetry'\", \"'fractal_dimension'\", \"'radius'\", \"'texture'\", \"'perimeter'\", \"'area'\", \"'smoothness'\", \"'compactness'\", \"'concavity'\", \"'concave points'\", \"'symmetry'\", \"'fractal_dimension'\", \"'Unnamed: 32'\", \"dtype='object'\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract and display only the base feature names (without _mean, _se, _worst)\n",
+    "raw_features = str(df.columns)\n",
+    "processed_features = raw_features.strip('Index')\n",
+    "processed_features = processed_features.replace('\\n','')\n",
+    "processed_features = processed_features.replace(',','\\n')\n",
+    "processed_features = processed_features.split('\\n')\n",
+    "def ProcessText(features):\n",
+    "    max_runs = (len(processed_features)-1)\n",
+    "    x = 0\n",
+    "    for i in processed_features:\n",
+    "        processed_features[x] = i.strip(\"([ ])\")\n",
+    "        processed_features[x] = processed_features[x].replace(\"_se\",\"\")\n",
+    "        processed_features[x] = processed_features[x].replace(\"_mean\",\"\")\n",
+    "        processed_features[x] = processed_features[x].replace(\"_worst\",\"\")\n",
+    "        if x == max_runs:\n",
+    "            return processed_features\n",
+    "        else:\n",
+    "            x += 1\n",
+    "final_processed = ProcessText(processed_features)\n",
+    "print(final_processed)"
    ]
   },
   {
@@ -577,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
