Added Part 4: Create Cell Irregularity Groups

--- a/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
+++ b/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "id": "a224af80-8254-48c2-9718-9a31fb1eeb0f",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "8e058914-cc86-40be-acb5-b0c3f8308fb8",
    "metadata": {},
    "outputs": [
@@ -444,50 +444,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features:                 Memory Usage:\n",
+      "Features:                 MemoryUsage:\n",
       "\n",
-      "Index                       132\n",
-      "id                         4552\n",
-      "diagnosis                  4552\n",
-      "radius_mean                4552\n",
-      "texture_mean               4552\n",
-      "perimeter_mean             4552\n",
-      "area_mean                  4552\n",
-      "smoothness_mean            4552\n",
-      "compactness_mean           4552\n",
-      "concavity_mean             4552\n",
-      "concave points_mean        4552\n",
-      "symmetry_mean              4552\n",
-      "fractal_dimension_mean     4552\n",
-      "radius_se                  4552\n",
-      "texture_se                 4552\n",
-      "perimeter_se               4552\n",
-      "area_se                    4552\n",
-      "smoothness_se              4552\n",
-      "compactness_se             4552\n",
-      "concavity_se               4552\n",
-      "concave points_se          4552\n",
-      "symmetry_se                4552\n",
-      "fractal_dimension_se       4552\n",
-      "radius_worst               4552\n",
-      "texture_worst              4552\n",
-      "perimeter_worst            4552\n",
-      "area_worst                 4552\n",
-      "smoothness_worst           4552\n",
-      "compactness_worst          4552\n",
-      "concavity_worst            4552\n",
-      "concave points_worst       4552\n",
-      "symmetry_worst             4552\n",
-      "fractal_dimension_worst    4552\n",
-      "Unnamed: 32                4552\n",
-      "dtype: int64\n"
+      "Index                        132\n",
+      "id                          4552\n",
+      "diagnosis                  28450\n",
+      "radius_mean                 4552\n",
+      "texture_mean                4552\n",
+      "perimeter_mean              4552\n",
+      "area_mean                   4552\n",
+      "smoothness_mean             4552\n",
+      "compactness_mean            4552\n",
+      "concavity_mean              4552\n",
+      "concave points_mean         4552\n",
+      "symmetry_mean               4552\n",
+      "fractal_dimension_mean      4552\n",
+      "radius_se                   4552\n",
+      "texture_se                  4552\n",
+      "perimeter_se                4552\n",
+      "area_se                     4552\n",
+      "smoothness_se               4552\n",
+      "compactness_se              4552\n",
+      "concavity_se                4552\n",
+      "concave points_se           4552\n",
+      "symmetry_se                 4552\n",
+      "fractal_dimension_se        4552\n",
+      "radius_worst                4552\n",
+      "texture_worst               4552\n",
+      "perimeter_worst             4552\n",
+      "area_worst                  4552\n",
+      "smoothness_worst            4552\n",
+      "compactness_worst           4552\n",
+      "concavity_worst             4552\n",
+      "concave points_worst        4552\n",
+      "symmetry_worst              4552\n",
+      "fractal_dimension_worst     4552\n",
+      "Unnamed: 32                 4552\n",
+      "dtype: int64\n",
+      "\n",
+      "Total usage (bytes):\n",
+      "174246\n"
      ]
     }
    ],
    "source": [
     "# Step 6\n",
-    "print(\"Features:                 Memory Usage:\\n\")\n",
-    "print(df.memory_usage())"
+    "print(\"Features:                 MemoryUsage:\\n\")\n",
+    "print(df.memory_usage(deep=True))\n",
+    "print(\"\\nTotal usage (bytes):\")\n",
+    "print(df.memory_usage(deep=True).sum())"
    ]
   },
   {
@@ -498,7 +503,9 @@
     "**Understanding df.memory_usage()**\n",
     "```\n",
     "This cell prints the memory usage of each column in bytes.\n",
-    "```"
+    "```\n",
+    "- This dataset is only 174.246 KB\n",
+    "- This is a small dataset as large ones can be multiple gigabytes."
    ]
   },
   {
@@ -738,11 +745,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "9ca494c4-6413-44a2-bb0c-cc7839c470a9",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df = df.iloc[:, :-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed893a43-bfd5-4490-a4f2-688ecc45b1c2",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6bbadd3-1dc1-46a6-afc4-b0c96ddad64b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27212d9c-692b-4d90-87c2-269fad942df2",
+   "metadata": {},
+   "source": [
+    "### Part 4: Create Cell Irregularity Groups"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28fe0ada-1cbf-4bdc-b663-26e2db42cbc6",
+   "metadata": {},
+   "source": [
+    "| Irregularity Category | Concavity Range | Clinical Rationale |\n",
+    "|-----------------------|-----------------|-------------------|\n",
+    "| Smooth | 0 - 0.03 | Minimal concavity, regular cell boundaries |\n",
+    "| Mild | 0.03 - 0.08 | Some irregularity, often seen in benign tumors |\n",
+    "| Moderate | 0.08 - 0.15 | Notable irregularity, warrants attention |\n",
+    "| Severe | 0.15 - 0.25 | High irregularity, suspicious for malignancy |\n",
+    "| Extreme | > 0.25 | Very irregular, strong indicator of malignancy |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "9a2f1da2-727a-4e95-a168-a4561c8fb5fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       Extreme\n",
+      "1      Moderate\n",
+      "2        Severe\n",
+      "3        Severe\n",
+      "4        Severe\n",
+      "         ...   \n",
+      "564      Severe\n",
+      "565    Moderate\n",
+      "566    Moderate\n",
+      "567     Extreme\n",
+      "568      Smooth\n",
+      "Name: concavity_category, Length: 569, dtype: category\n",
+      "Categories (5, object): ['Smooth' < 'Mild' < 'Moderate' < 'Severe' < 'Extreme']\n"
+     ]
+    }
+   ],
+   "source": [
+    "bins = [0, 0.035, 0.085, 0.155, 0.255, np.inf]\n",
+    "labels = ['Smooth', 'Mild', 'Moderate', 'Severe', 'Extreme']\n",
+    "df['concavity_category'] = pd.cut(df['concavity_mean'], bins=bins, labels=labels, include_lowest=True)\n",
+    "print(df['concavity_category'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "92412729-e21d-4aa8-ab03-ef5af4dd01ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smooth: 172 cases (5 M, 167 B)\n",
+      "Mild: 167 cases (21 M, 146 B)\n",
+      "Moderate: 125 cases (86 M, 39 B)\n",
+      "Severe: 83 cases (81 M, 2 B)\n",
+      "Extreme: 22 cases (19 M, 3 B)\n",
+      "\n",
+      "Total malignant: 212\n",
+      "Total benign: 357\n",
+      "Total cases: 569\n"
+     ]
+    }
+   ],
+   "source": [
+    "category_counts = {}\n",
+    "malignancy_category_count = 0\n",
+    "benign_category_count = 0\n",
+    "for category in df['concavity_category'].cat.categories:\n",
+    "    count = len(df[df['concavity_category'] == category])\n",
+    "    category_counts[category] = count\n",
+    "    malignant_in_category = len(df[(df['concavity_category'] == category) & (df['diagnosis'] == 'M')])\n",
+    "    benign_in_category = count - malignant_in_category  # Benign = total - malignant\n",
+    "    malignancy_category_count += malignant_in_category\n",
+    "    benign_category_count += benign_in_category\n",
+    "    \n",
+    "    print(f\"{category}: {count} cases ({malignant_in_category} M, {benign_in_category} B)\")\n",
+    "print(\"\\nTotal malignant:\", malignancy_category_count)\n",
+    "print(\"Total benign:\", benign_category_count)\n",
+    "print(\"Total cases:\", malignancy_category_count + benign_category_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "5a6d925f-a632-4ccd-a073-6004a47e1850",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Smooth': 172, 'Mild': 167, 'Moderate': 125, 'Severe': 83, 'Extreme': 22}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(category_counts)"
+   ]
   }
  ],
  "metadata": {
