Added Percentages to Part 4

--- a/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
+++ b/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 109,
    "id": "92412729-e21d-4aa8-ab03-ef5af4dd01ca",
    "metadata": {},
    "outputs": [
@@ -834,11 +834,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Smooth: 172 cases (5 M, 167 B)\n",
-      "Mild: 167 cases (21 M, 146 B)\n",
-      "Moderate: 125 cases (86 M, 39 B)\n",
-      "Severe: 83 cases (81 M, 2 B)\n",
-      "Extreme: 22 cases (19 M, 3 B)\n",
+      "Smooth: 172 cases (5 M, 167 B) (2.9069767441860463)\n",
+      "Mild: 167 cases (21 M, 146 B) (12.574850299401197)\n",
+      "Moderate: 125 cases (86 M, 39 B) (68.8)\n",
+      "Severe: 83 cases (81 M, 2 B) (97.59036144578313)\n",
+      "Extreme: 22 cases (19 M, 3 B) (86.36363636363636)\n",
       "\n",
       "Total malignant: 212\n",
       "Total benign: 357\n",
@@ -858,7 +858,7 @@
     "    malignancy_category_count += malignant_in_category\n",
     "    benign_category_count += benign_in_category\n",
     "    \n",
-    "    print(f\"{category}: {count} cases ({malignant_in_category} M, {benign_in_category} B)\")\n",
+    "    print(f\"{category}: {count} cases ({malignant_in_category} M, {benign_in_category} B) ({(malignant_in_category/count) * 100})\")\n",
     "print(\"\\nTotal malignant:\", malignancy_category_count)\n",
     "print(\"Total benign:\", benign_category_count)\n",
     "print(\"Total cases:\", malignancy_category_count + benign_category_count)"
