Updated project based on requirements.

--- a/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
+++ b/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 194,
    "id": "a224af80-8254-48c2-9718-9a31fb1eeb0f",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 195,
    "id": "481ff8a2-5e5c-470c-b0cd-916d5621f508",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 196,
    "id": "73281a13-bdc0-4047-ad86-96f7a67a6a85",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 197,
    "id": "9f6e24c8-0930-4084-8f65-d4e9535847e1",
    "metadata": {},
    "outputs": [
@@ -207,8 +207,8 @@
     "            return processed_features\n",
     "        else:\n",
     "            x += 1\n",
-    "final_processed = ProcessText(processed_features)\n",
-    "print(final_processed)"
+    "features_processed = ProcessText(processed_features)\n",
+    "print(features_processed)"
    ]
   },
   {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 198,
    "id": "558a459e-6a62-49ac-a3c1-9af0afc4f11a",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 199,
    "id": "379c435c-b3d1-445b-80aa-8144b2c100d7",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 200,
    "id": "456b2985-43fa-410c-803e-5d67cc236a63",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 201,
    "id": "8e058914-cc86-40be-acb5-b0c3f8308fb8",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 202,
    "id": "f718f33b-a165-4fef-b222-ec4f04885fa7",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 254,
    "id": "c2fda42b-a611-4e84-8644-7f68bad87134",
    "metadata": {},
    "outputs": [
@@ -586,25 +586,24 @@
      "text": [
       "Identify Duplicate Rows:\n",
       "\n",
-      "0      False\n",
-      "1      False\n",
-      "2      False\n",
-      "3      False\n",
-      "4      False\n",
-      "       ...  \n",
-      "564    False\n",
-      "565    False\n",
-      "566    False\n",
-      "567    False\n",
-      "568    False\n",
-      "Length: 569, dtype: bool\n"
+      "✅ The dataset has no duplicated rows.\n",
+      "✅ The `id` column has no duplicated values.\n"
      ]
     }
    ],
    "source": [
     "# Step 8\n",
     "print(\"Identify Duplicate Rows:\\n\")\n",
-    "print(df.duplicated())"
+    "feature_check = \"id\"\n",
+    "x = df.duplicated(subset=[feature_check])\n",
+    "if df.duplicated().any():\n",
+    "    print(f\"❌ There are some duplicated rows in the dataset.\")\n",
+    "else:\n",
+    "    print(f\"✅ The dataset has no duplicated rows.\")\n",
+    "if x.any():\n",
+    "    print(f\"❌ There are some duplicated values in the `{feature_check}` column.\")\n",
+    "else:\n",
+    "    print(f\"✅ The `{feature_check}` column has no duplicated values.\")"
    ]
   },
   {
@@ -614,13 +613,15 @@
    "source": [
     "**Understanding df.duplicated()**\n",
     "```\n",
-    "This cell prints a list of the rows and an indication of if it is a duplicate of another row. In this case there are no duplicated rows\n",
-    "```"
+    "This cell prints a list of the rows and an indication of if it is a duplicate of another row.\n",
+    "```\n",
+    "- Are there any duplicate rows? The dataset has no duplicated rows.\n",
+    "- Are all patient IDs unique? Yes. The `id` column has no duplicated values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 204,
    "id": "075de724-9e00-4d10-a604-e99481c5df99",
    "metadata": {},
    "outputs": [
@@ -708,12 +709,16 @@
     "**Understanding df.describe()**\n",
     "```\n",
     "This cell prints an overview of the data. It summarizes each feature with a count, mean, standard deviation, minimum value, lower percentile (25%), median (50%), upper percentile (75%), and maximum value\n",
-    "```"
+    "```\n",
+    "- What is the radius_mean range in the dataset? 6.981000 to 28.110000\n",
+    "- What is the range of area_mean values? 143.500000 to 2501.000000\n",
+    "- What is the range of concavity_mean values? 0.000000 to 0.426800\n",
+    "- Do any min/max values seem impossible or clinically unlikely? No, none of the data seems clinically unlikely."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 205,
    "id": "0643401e-116e-412d-a2a5-0d5e40ecd364",
    "metadata": {},
    "outputs": [
@@ -776,7 +781,12 @@
     "**Understanding df.nunique()**\n",
     "```\n",
     "This cell prints the number of nuique values for each feature. Some cells have more unique values than others, this is the cardinality of the value\n",
-    "```"
+    "```\n",
+    "- Which columns have very few unique values (likely categorical)? Only the diagnosis column.\n",
+    "\n",
+    "- Which columns have many unique values (likely continuous)? All of the other columns have many unique values. `fractal_dimension_se` has the most with 545.\n",
+    "\n",
+    "- Does the number of unique IDs match the number of rows? Yes there are 569 unique values and 569 rows."
    ]
   },
   {
@@ -794,35 +804,217 @@
    "source": [
     "| Column | Description | Feature Type | Valid Values/Range | Notes/Issues |\n",
     "|--------|-------------|--------------|-------------------|--------------|\n",
-    "| `id` |Unique identifier| int64 |Numbers greater than 0|  |\n",
-    "| `diagnosis` | Is the diagnosis benign or malignant|Object|`M` or `B`| |\n",
-    "| `radius_mean` |Average distance from the center of the cell to its perimeter|float64|Positive numbers|Smaller are often benign in this dataset|\n",
-    "| `texture_mean` |standard deviation of gray-scale values within the nucleus|float64|Positive numbers|How \"rough\" the nucleus appears|\n",
-    "| `perimeter_mean` |Average length of the cell's perimeter|float64|Positive numbers| |\n",
-    "| `area_mean` |Average area if the nucleus|float64|Positive numbers|larger area = bigger cells|\n",
-    "| `smoothness_mean` |Local variation in nuclear contour|float64|Positive numbers||\n",
-    "| `compactness_mean` | | | | |\n",
-    "| `concavity_mean` | | | | |\n",
-    "| `concave points_mean` | | | | |\n",
-    "| `symmetry_mean` | | | | |\n",
-    "| `fractal_dimension_mean` | | | | |"
+    "| `id` |Unique identifier| int64 |>0 (5-8 digits)|Unique per sample|\n",
+    "| `diagnosis` |Benign `B` or malignant `M`|Object|`M`, `B`|212 `M`, 357 `B`|\n",
+    "| `radius_mean` |Average distance from the center of the cell to its perimeter|float64|Non-negative numbers|Smaller are often benign in this dataset|\n",
+    "| `texture_mean` |standard deviation of gray-scale values within the nucleus|float64|Non-negative numbers|How \"rough\" the nucleus appears|\n",
+    "| `perimeter_mean` |Average length of the cell's perimeter|float64|Non-negative numbers| |\n",
+    "| `area_mean` |Average area if the nucleus|float64|Non-negative numbers|Larger area = bigger cells|\n",
+    "| `smoothness_mean` |Local variation in nuclear contour|float64|Non-negative numbers|Irregularity|\n",
+    "| `compactness_mean` |Measure of how \"compact\" or dense the nucleus shape is|float64|Non-negative numbers|perimeter² / area − 1.0|\n",
+    "| `concavity_mean` |Severity of inward indentations/concavities|float64|Non-negative numbers|Depth of dents|\n",
+    "| `concave points_mean` |Number of of inward indentations/concavities|float64|Non-negative numbers|Count of depths|\n",
+    "| `symmetry_mean` |How symmetric the nuclear contours are|float64|Non-negative numbers|1.0 = Perfect symmetry (>1.0: Possible if implementation allows (e.g., asymmetric distortion metrics))|\n",
+    "| `fractal_dimension_mean` |Measures the roughness/complexity of the nuclear boundary using fractal scaling principles|float64|Non-negative numbers|Theoretical minimum is ~0|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed893a43-bfd5-4490-a4f2-688ecc45b1c2",
+   "metadata": {},
+   "source": [
+    "**1. What is cell morphology in the context of cancer diagnosis? Why is the shape of cell nuclei an important indicator of malignancy?**\n",
+    "\n",
+    "Your answer: Morphology is the cells external structure, shape, size, and generally how it looks.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**2. Explain what \"concavity\" and \"concave points\" measure. Why might cancer cells have more irregular, concave boundaries?**\n",
+    "\n",
+    "Your answer: Concavity and concave points measure the amount and severity of indentations in the nucleus. Cancer cells develop more irregular concave boundaries based on a number of factors including dysregulated growth mechanics and genomic instability.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**3. What is pleomorphism in cancer cells? How does it relate to the variation measurements (standard error) in this dataset?**\n",
+    "\n",
+    "Your answer: Pleomorphism is the variation in cell size and shape within a tumor sample. The variation measurements directly quantify pleomorphism.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**4. How do pathologists traditionally examine FNA samples? What advantages does computational analysis provide over manual examination?**\n",
+    "\n",
+    "Your answer: Pathologists traditionally examine FNA samples using microscopes. Benefits of computational analysis include speed and accuracy when compared to human eyes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6bbadd3-1dc1-46a6-afc4-b0c96ddad64b",
+   "metadata": {},
+   "source": [
+    "### Part 3: Data Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3af036f3-38d0-41f1-91fd-4a847a28dc81",
+   "metadata": {},
+   "source": [
+    "#### 3.1 Diagnosis Distribution Validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ed893a43-bfd5-4490-a4f2-688ecc45b1c2",
+   "execution_count": 206,
+   "id": "18f88098-e271-41c5-b3b3-db1749f59372",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Malignant (M): 212 (37.26%) \n",
+      "Benign    (B): 357 (62.74%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dx_counts = df['diagnosis'].value_counts().tolist()\n",
+    "dx_m_count = dx_counts[1]\n",
+    "dx_b_count = dx_counts[0]\n",
+    "dx_count_all = dx_b_count + dx_m_count\n",
+    "print(f\"Malignant (M): {dx_m_count} ({(dx_m_count/dx_count_all):.2%}) \\nBenign    (B): {dx_b_count} ({(dx_b_count/dx_count_all):.2%})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c48723ad-9d65-46cd-899a-19cdb581a825",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "This dataset is weighted towards the Benign diagnosis with just under 2/3 of the cases.\n",
+    "According to the Breast Cancer Research Foundation, roughly 75% of biopsies performed in the U.S. are benign¹.\n",
+    "\n",
+    "1.Brown J. What Is a Breast Biopsy? Breast Cancer Research Foundation. March 21, 2025. Accessed February 12, 2026. https://www.bcrf.org/about-breast-cancer/breast-biopsy/\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8eb324c-22a2-4e04-9195-08180b796f5f",
+   "metadata": {},
+   "source": [
+    "#### 3.2 Empty Column Validation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f6bbadd3-1dc1-46a6-afc4-b0c96ddad64b",
+   "execution_count": 207,
+   "id": "311c8db4-0337-44cf-a107-041301739981",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Unnamed: 32']\n"
+     ]
+    }
+   ],
+   "source": [
+    "null_summary = df.isnull().sum()\n",
+    "empty_columns = null_summary[null_summary == len(df)].index.tolist()\n",
+    "print(empty_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbd99ef1-5c81-49f0-ba27-2271ceeba4fb",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "There is one empty column in this dataset. This is due to trailing commas in the csv file. The following code block will drop this before we begin the analysis.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "5b452c0d-c0c0-4807-8556-bfd4075c0c8a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "null_summary = df.isnull().sum()\n",
+    "empty_columns = null_summary[null_summary == len(df)].index.tolist()\n",
+    "df = df.iloc[:, :-1]\n",
+    "empty_columns\n",
+    "if empty_columns == []:\n",
+    "    print(\"Successfully dropped empty columns.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72e898f3-06f6-4262-b54b-6f23f11c1e42",
+   "metadata": {},
+   "source": [
+    "#### 3.3 Feature Range Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "id": "20fa2a60-be1a-459f-a6ba-c2f1a34f2f53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total violations: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "col_map = {\n",
+    "    'radius': ('radius_mean', 'radius_worst'),\n",
+    "    'texture': ('texture_mean', 'texture_worst'),\n",
+    "    'perimeter': ('perimeter_mean', 'perimeter_worst'),\n",
+    "    'area': ('area_mean', 'area_worst'),\n",
+    "    'smoothness': ('smoothness_mean', 'smoothness_worst'),\n",
+    "    'compactness': ('compactness_mean', 'compactness_worst'),\n",
+    "    'concavity': ('concavity_mean', 'concavity_worst'),\n",
+    "    'concave points': ('concave points_mean', 'concave points_worst'),  # Space!\n",
+    "    'symmetry': ('symmetry_mean', 'symmetry_worst'),\n",
+    "    'fractal_dimension': ('fractal_dimension_mean', 'fractal_dimension_worst')\n",
+    "}\n",
+    "\n",
+    "violations = 0\n",
+    "for feature, (mean_col, worst_col) in col_map.items():\n",
+    "    # Verify columns exist\n",
+    "    if mean_col in df.columns and worst_col in df.columns:\n",
+    "        viol = (df[worst_col] < df[mean_col]).sum()\n",
+    "        violations += viol\n",
+    "        # print(f\"{worst_col} >= {mean_col}: {viol} violations\")\n",
+    "    else:\n",
+    "        print(f\"Missing: {mean_col} or {worst_col}\")\n",
+    "\n",
+    "print(f\"\\nTotal violations: {violations}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7dc46af-7721-45a3-af37-8fb471db2ec0",
+   "metadata": {},
+   "source": [
+    "\n",
+    "In this dataset: \n",
+    "\n",
+    "`radius_worst` **is** always >= `radius_mean`\n",
+    "\n",
+    "**All** features that have a worst/mean column follow this rule\n",
+    "\n",
+    "If this relationship was violated there would likely be an issue with the data\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -848,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 218,
    "id": "9a2f1da2-727a-4e95-a168-a4561c8fb5fb",
    "metadata": {},
    "outputs": [
@@ -856,32 +1048,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       Extreme\n",
-      "1      Moderate\n",
-      "2        Severe\n",
-      "3        Severe\n",
-      "4        Severe\n",
-      "         ...   \n",
-      "564      Severe\n",
-      "565    Moderate\n",
-      "566    Moderate\n",
-      "567     Extreme\n",
-      "568      Smooth\n",
-      "Name: concavity_category, Length: 569, dtype: category\n",
-      "Categories (5, object): ['Smooth' < 'Mild' < 'Moderate' < 'Severe' < 'Extreme']\n"
+      "concavity_category\n",
+      "Smooth:      172\n",
+      "Mild:        167\n",
+      "Moderate:    125\n",
+      "Severe:       83\n",
+      "Extreme:      22\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "bins = [0, 0.035, 0.085, 0.155, 0.255, np.inf]\n",
-    "labels = ['Smooth', 'Mild', 'Moderate', 'Severe', 'Extreme']\n",
+    "labels = ['Smooth:', 'Mild:', 'Moderate:', 'Severe:', 'Extreme:']\n",
     "df['concavity_category'] = pd.cut(df['concavity_mean'], bins=bins, labels=labels, include_lowest=True)\n",
-    "print(df['concavity_category'])"
+    "print(df['concavity_category'].value_counts().sort_index())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 215,
    "id": "92412729-e21d-4aa8-ab03-ef5af4dd01ca",
    "metadata": {},
    "outputs": [
@@ -966,17 +1152,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c48723ad-9d65-46cd-899a-19cdb581a825",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5a6d925f-a632-4ccd-a073-6004a47e1850",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Analysis Questions:\n",
+    "\n",
+    "**1. How many tumors are in each irregularity category?**\n",
+    "\n",
+    "Your answer:  \n",
+    "    Smooth:      172  \n",
+    "    Mild:        167  \n",
+    "    Moderate:    125  \n",
+    "    Severe:       83  \n",
+    "    Extreme:      22  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "**2. What is the malignancy rate (percentage) for each irregularity category?**\n",
+    "\n",
+    "Your answer:  \n",
+    "    Smooth:    2.91%  \n",
+    "    Mild:     12.57%  \n",
+    "    Moderate: 68.80%  \n",
+    "    Severe:   97.59%  \n",
+    "    Extreme:  86.36%  \n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**3. At what level of concavity does malignancy rate sharply increase? Does cell shape irregularity appear to be a strong predictor of cancer?**\n",
+    "\n",
+    "Your answer:  \n",
+    "    Moderate\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**4. Why might severely irregular cell boundaries be associated with malignancy? (Think about how cancer cells grow and divide.)**\n",
+    "\n",
+    "Your answer:  \n",
+    "    As the cells grow they rapidly change and deform\n",
+    "---"
+   ]
   },
   {
    "cell_type": "code",
